--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "carp-travel-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
-  }
+    "name": "carp-travel-app",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "14.2.2",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
+        "react-hot-toast": "^2.4.1",
+        "react-scroll": "^1.9.0",
+        "swiper": "^11.1.1",
+        "zod": "^3.22.5"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.2",
+        "postcss": "^8",
+        "postcss-import": "^16.1.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.4.5"
+    }
 }
