--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@react-spring/web": "^9.7.3",
+        "autoprefixer": "^10.4.19",
         "next": "14.2.2",
+        "postcss": "^8.4.38",
+        "postcss-import": "^16.1.0",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
         "react-hot-toast": "^2.4.1",
         "react-scroll": "^1.9.0",
         "swiper": "^11.1.1",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.4.5",
+        "use-media": "^1.5.0",
         "zod": "^3.22.5"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "autoprefixer": "^10.4.19",
         "eslint": "^8",
-        "eslint-config-next": "14.2.2",
-        "postcss": "^8",
-        "postcss-import": "^16.1.0",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.4.5"
+        "eslint-config-next": "14.2.2"
     }
 }
