--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
         "react-scroll": "^1.9.0",
         "swiper": "^11.1.1",
         "tailwindcss": "^3.4.3",
-        "typescript": "^5.4.5",
-        "use-media": "^1.5.0",
-        "zod": "^3.22.5"
+        "typescript": "^5.4.5"
     },
     "devDependencies": {
         "@types/node": "^20",
